--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                                 </svg>
                             </div>
                             <div>
-                                <h3 class="text-white font-semibold">Handcrafted</h3>
-                                <p class="text-white/70 text-sm">Premium Quality</p>
+                                <h3 class="text-black font-semibold">Handcrafted</h3>
+                                <p class="text-black/70 text-sm">Premium Quality</p>
                             </div>
                         </div>
                         <div class="flex items-center gap-3">
