--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                                 </svg>
                             </div>
                             <div>
-                                <h3 class="text-white font-semibold">Fast Delivery</h3>
-                                <p class="text-white/70 text-sm">4-5 Days</p>
+                                <h3 class="text-black font-semibold">Fast Delivery</h3>
+                                <p class="text-black/70 text-sm">4-5 Days</p>
                             </div>
                         </div>
                     </div>
