--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="text-center lg:text-left" data-aos="fade-right">
                     <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-montserrat font-bold text-white mb-4 sm:mb-6 leading-tight">
                         DeAjeng<br>
-                        <span class="text-red-500">Sewing Craft</span>
+                        <span class="text-red-500">SEWING CRAFT</span>
                     </h1>
                     <p class="text-lg sm:text-xl md:text-2xl mb-6 sm:mb-8 text-white/90 max-w-xl mx-auto lg:mx-0">
                         Where traditional Palembang craftsmanship meets contemporary elegance in every handcrafted bag
